tcp to nats, new big change

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,6 @@ PORT=3002
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/ordersdb?schema=public"
+
+#NATS_SERVERS="transports://localhost:4222,transports://localhost:4223" Si necesitamos mas de un NAT SERVER, se separan por comas.
+NATS_SERVERS="nats://localhost:4222"
