update cloud-build x3

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -4,7 +4,7 @@ steps:
     args:
       - -c
       - |
-        northamerica-south1-docker.pkg.dev/tienda-microservices-452901/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+        docker build -t northamerica-south1-docker.pkg.dev/tienda-microservices-452901/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
     secretEnv: ['DATABASE_URL']
 
   - name: 'gcr.io/cloud-builders/docker'
